BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/TSF_vod__c.object
<CustomObject>
    <description>The object that stores territory specific fields for an account. If no row exists for an account / territory combination a new row will be created when an interaction is saved to that account.</description>
    <fields>
        <fullName>Account_Source_Country_BMS_CORE__c</fullName>
        <formula>TEXT(Account_vod__r.Account_Source_Country_BMS_CORE__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Source Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Territory_BMS__c</fullName>
        <formula>CASESAFEID(Account_vod__c)&amp;&quot;-&quot;&amp;Territory_vod__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Territory</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_vod__c</fullName>
        <description>Lookup to the account for which the territory specific field is applied to.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>TSF_vod</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Address_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the address of the account assigned to the territory.</description>
        <label>My Preferred Address</label>
        <referenceTo>Address_vod__c</referenceTo>
        <relationshipLabel>Territory Fields</relationshipLabel>
        <relationshipName>TSF_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Allowed_Products_vod__c</fullName>
        <description>Double semi-colon delimited list of Product Names
-- Example: Cholecap;;Labrinone</description>
        <inlineHelpText>Double semi-colon delimited list of Product Names
-- Example: Cholecap;;Labrinone</inlineHelpText>
        <label>Allowed Product</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BMS_RemoveFromGeography__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Remove from Geography</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Call_Plan_BMS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Call Plan?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Days_Last_Interaction_BMS_EMEA__c</fullName>
        <description>VPRO - October 2013 - BMS EU: Formula field to calculate the number of days since the last interaction has been submitted. Create to be used to create views. (Req 571).</description>
        <formula>Today()-Last_Activity_Date_vod__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Last Interaction</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email_Access_BMS_EMEA__c</fullName>
        <description>VPRO March: Access specific to be added in TSF.</description>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_MSM_BMS_EMEA__c</fullName>
        <description>VPRO March 2014: MSM specific Email field.</description>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_Sales_BMS_EMEA__c</fullName>
        <description>BMS ACN - July 2014 : InterAct Req 1495 - Sales Specifc Email Field to be added in TSF.</description>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>External_Id_vod__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>External Id that is populated by a Veeva Trigger. The field is populate on insert\update with a composite index of Account + &apos;__&apos; + Territory.</description>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Fax_Access_BMS_EMEA__c</fullName>
        <description>VPRO March 2014: access specific fax field.</description>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Fax_MSL_BMS_EMEA__c</fullName>
        <description>VPRO March 2014: MSL specific Fax field.</description>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Immunoscience_Decile_BMS__c</fullName>
        <label>Immunoscience Decile</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Immunoscience_Rating_BMS__c</fullName>
        <label>Immunoscience Rating</label>
        <picklist>
            <picklistValues>
                <fullName>1RED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2WHT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3BLU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4GRN</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>KAM_Sync_BMS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>KAM Sync?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Key_Person_BMS_CN__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Key Person</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Activity_Date_vod__c</fullName>
        <description>The most recent date a call was made to the account for the given territory.  This excludes &quot;Planned&quot; calls for that account/territory. Updated when calls are saved.</description>
        <label>My Last Activity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Long_Term_Goal_BMS_CA__c</fullName>
        <description>Define Long Term Goal for Account</description>
        <label>Long Term Goal</label>
        <picklist>
            <picklistValues>
                <fullName>Uninterested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Studying</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Initiating</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Board</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mobile_Access_BMS_EMEA__c</fullName>
        <description>VPRO March 2014: Access specific mobile field.</description>
        <label>Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Mobile_ID_vod__c</fullName>
        <description>System field used by mobile products to aid synchronization.</description>
        <externalId>true</externalId>
        <label>Mobile ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Mobile_MSL_BMS_EMEA__c</fullName>
        <description>VPRO March 2014: MSL specific Mobile field.</description>
        <label>Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Mobile_Sales_BMS_EMEA__c</fullName>
        <description>BMS ACN - August 2014 : Sales Specifc Mobile Field to be added on TSF.</description>
        <label>Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>My_List__c</fullName>
        <defaultValue>false</defaultValue>
        <label>My List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>My_MCCP_Target_BMS_EMEA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>BMS ACN - May 2016: Field used to populate the MCCP Targets.</description>
        <label>My MCCP Target</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>My_Target_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines whether the account is specifically targeted in that territory.</description>
        <label>My Target</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Network_Name_BMS_EMEA__c</fullName>
        <description>VPRO August 2014</description>
        <label>Network Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>On_Medical_Plan_BMS_CN__c</fullName>
        <defaultValue>false</defaultValue>
        <label>On Medical Plan?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phone_Access_BMS_EMEA__c</fullName>
        <description>VPRO March 2014: Access specific phone field.</description>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Phone_MSL_BMS_EMEA__c</fullName>
        <description>VPRO March 2014: MSL specific phone field.</description>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Phone_Sales_BMS_EMEA__c</fullName>
        <description>VPRO March 2014 Sales specific Phone field.</description>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Preferred_Account_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Populated by TSF Future Apex Logic on Calls.</description>
        <label>My Preferred Location</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Territory Fields (My Preferred Location)</relationshipLabel>
        <relationshipName>Perferred_Account_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Recommend_for_Removal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this to Recommend for Removal of this Customer</description>
        <label>Recommend for Removal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rep_Target_BMS__c</fullName>
        <label>Rep Target</label>
        <picklist>
            <picklistValues>
                <fullName>Limited Access</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Access</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Target</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sample Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Target Prescriber</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rep_Target_Reason_BMS__c</fullName>
        <label>Rep Target Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Management Approved No Calls</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Specialty Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rep_Target_Reason_for_ZS_BMS__c</fullName>
        <formula>CASE(Rep_Target_Reason_BMS__c, &quot;Deceased&quot;, &quot;DIED&quot;, &quot;Management Approved No Calls&quot;, &quot;MANC&quot;, &quot;Moved Out Of Territory&quot;, &quot;MOOT&quot;,  &quot;Retired&quot;, &quot;RET&quot;,  &quot;Specialty Not Applicable&quot;, &quot;SNA&quot;, &quot;NONE&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rep Target Reason for ZS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rep_Target_for_ZS_BMS__c</fullName>
        <formula>CASE( Rep_Target_BMS__c, &quot;Target Prescriber&quot;, &quot;1&quot;, &quot;Limited Access&quot;, &quot;2&quot;, &quot;Sample Only&quot;, &quot;3&quot;,  &quot;Non-Target&quot;, &quot;4&quot;,  &quot;No Access&quot;, &quot;5&quot;, &quot;0&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rep Target for ZS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Route_vod__c</fullName>
        <description>The assigned route used for the account in a given territory.  To edit the routes, edit the picklist values.</description>
        <label>Route</label>
        <picklist>
            <picklistValues>
                <fullName>Route 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Route 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Route 3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Short_Term_Goal_BMS_CA__c</fullName>
        <description>Define Short Term Goal for Account</description>
        <label>Short Term Goal</label>
        <picklist>
            <picklistValues>
                <fullName>Uninterested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Studying</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Initiating</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Board</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TA_BMS__c</fullName>
        <formula>IF((CreatedBy.Profile.Name=&quot;BMS-SPEC1-MGR-SALES&quot;)||(CreatedBy.Profile.Name=&quot;BMS-SPEC1-REP-SALES&quot;)||(CreatedBy.Profile.Name=&quot;BMS-SPEC2-MGR-RS&quot;)||(CreatedBy.Profile.Name=&quot;BMS-SPEC2-REP-RS&quot;)||(CreatedBy.Profile.Name=&quot;BMS-SPEC3-MGR-MSL&quot;)||(CreatedBy.Profile.Name=&quot;BMS-SPEC3-REP-MSL&quot;)||(CreatedBy.Profile.Name=&quot;BMS-SPEC4-OCS&quot;),&quot;ONCOLOGY&quot;,(IF((CreatedBy.Profile.Name=&quot;BMS-SPEC5-MGR-SALES&quot;)||(CreatedBy.Profile.Name=&quot;BMS-SPEC5-REP-SALES&quot;)||(CreatedBy.Profile.Name=&quot;BMS-SPEC6-MGR-RS&quot;)||(CreatedBy.Profile.Name=&quot;BMS-SPEC6-REP-RS&quot;)||(CreatedBy.Profile.Name=&quot;BMS-SPEC7-MGR-MSL&quot;)||(CreatedBy.Profile.Name=&quot;BMS-SPEC7-REP-MSL&quot;)||(CreatedBy.Profile.Name=&quot;BMS-SPEC10-REP-MSL&quot;)||(CreatedBy.Profile.Name=&quot;BMS-SPEC10-MGR-MSL&quot;),&quot;IMMUNOSCIENCE&quot;,&quot;N/A&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_vod__c</fullName>
        <description>The name of the territory for which the territory specific fields of an account are created for.</description>
        <externalId>true</externalId>
        <label>Territory</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>YTD_Activity_vod__c</fullName>
        <description>The YTD total number of recorded calls (excluding &quot;Planned&quot; calls) for an account within the given territory. Updated when calls are saved.</description>
        <label>My YTD Activity</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>iRep_Sync_BMS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to control which Accounts will go to iRep? If you want to send this Account to iRep, please check this checkbox.</description>
        <inlineHelpText>Checkbox to control which Accounts will go to iRep? If you want to send this Account to iRep, please check this checkbox.</inlineHelpText>
        <label>iRep Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>iRep_Sync_SPEC5_MGR__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to control which Accounts will go to iRep? If you want to send this Account to iRep, please check this checkbox.</description>
        <inlineHelpText>Checkbox to control which Accounts will go to iRep? If you want to send this Account to iRep, please check this checkbox.</inlineHelpText>
        <label>iRep sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>iRep_sync_DBM__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to control which Accounts will go to iRep? If you want to send this Account to iRep, please check this checkbox.</description>
        <inlineHelpText>Checkbox to control which Accounts will go to iRep? If you want to send this Account to iRep, please check this checkbox.</inlineHelpText>
        <label>iRep sync</label>
        <type>Checkbox</type>
    </fields>
    <label>Territory Field</label>
    <nameField>
        <label>TSF Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Territory Fields</pluralLabel>
    <recordTypes>
        <fullName>BMS_Canada_Individual</fullName>
        <active>true</active>
        <label>BMS Canada - Individual</label>
    </recordTypes>
    <recordTypes>
        <fullName>BMS_Canada_Organization</fullName>
        <active>true</active>
        <description>BMS Canada - Organization</description>
        <label>BMS Canada - Organization</label>
    </recordTypes>
    <recordTypes>
        <fullName>BMS_Department</fullName>
        <active>true</active>
        <label>BMS - Department</label>
    </recordTypes>
    <recordTypes>
        <fullName>BMS_Group_Practice</fullName>
        <active>true</active>
        <label>BMS - Group Practice</label>
    </recordTypes>
    <recordTypes>
        <fullName>BMS_Individual</fullName>
        <active>true</active>
        <label>BMS - Individual</label>
    </recordTypes>
    <recordTypes>
        <fullName>BMS_Individual_Pending</fullName>
        <active>true</active>
        <label>BMS - Individual (Pending)</label>
    </recordTypes>
    <recordTypes>
        <fullName>BMS_Institution</fullName>
        <active>true</active>
        <label>BMS - Institution</label>
    </recordTypes>
    <recordTypes>
        <fullName>BMS_Institution_MM</fullName>
        <active>true</active>
        <label>BMS - Institution (MM)</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>